--- a/extensions/pi-inspector/tsconfig.json
+++ b/extensions/pi-inspector/tsconfig.json
@@ -4,7 +4,9 @@
     "target": "ES2022",
     "outDir": "dist",
   "lib": ["ES2022"],
+  "moduleResolution": "node",
   "types": ["node", "vscode"],
+  "typeRoots": ["./node_modules/@types"],
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true
