--- a/extensions/pi-inspector/package.json
+++ b/extensions/pi-inspector/package.json
@@ -2,7 +2,7 @@
   "name": "pi-inspector",
   "displayName": "Pi Inspector",
   "description": "Wires Copilot Agent Mode to a local Raspberry Pi inspector API.",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "engines": { "vscode": ">=1.90.0" },
   "publisher": "mcfuzzysquirrel",
   "license": "MIT",
@@ -11,12 +11,21 @@
     "url": "https://github.com/mcfuzzysquirrel/pi-inspector.git"
   },
   "categories": ["Other"],
-  "activationEvents": ["onStartupFinished"],
+  "activationEvents": ["onStartupFinished", "onChatParticipant:pi-inspector"],
   "main": "dist/extension.js",
   "contributes": {
     "commands": [
       { "command": "piInspector.health", "title": "Pi Inspector: Health" },
-      { "command": "piInspector.capabilities", "title": "Pi Inspector: Capabilities" }
+  { "command": "piInspector.capabilities", "title": "Pi Inspector: Capabilities" },
+  { "command": "piInspector.registerTools", "title": "Pi Inspector: Register LM Tools" },
+  { "command": "piInspector.showOutput", "title": "Pi Inspector: Show Output" }
+    ],
+    "chatParticipants": [
+      {
+        "id": "pi-inspector",
+        "name": "PiInspector",
+        "description": "Query Raspberry Pi environment via local inspector API"
+      }
     ],
     "configuration": {
       "type": "object",
@@ -30,6 +39,13 @@
       }
     }
   },
+  "enabledApiProposals": [
+    "chatParticipantAdditions",
+    "languageModelCapabilities",
+    "languageModelSystem",
+  "languageModelToolResultAudience",
+  "languageModelDataPart"
+  ],
   "scripts": {
     "build": "esbuild src/extension.ts --bundle --outfile=dist/extension.js --platform=node --format=cjs --external:vscode",
     "watch": "npm run build -- --watch",
