MCP stdio server: new tools, tests, self-test CLI, docs; CI + release workflows; VS Code MCP config example; deprecate legacy HTTP tests

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,3 @@
 {
-    "chat.mcp.autostart": "newAndOutdated",
-    "terminal.integrated.env.linux": {
-        "INSPECTOR_PORT": "5051",
-        "PORT": "5051"
-    }
+    "chat.mcp.autostart": "newAndOutdated"
 }
